--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
                 <article>
                     <h2>Канцелярські ножі</h2>
                     <img src="https://learn.logikaschool.com/uploads/student/2409825/66a4b628a0ffe.jpg" width="400px" height="400px"/>
-                    <p>Щоб забити однокласника</p>
+                    <p>Для уроків праці</p>
                     <a class="article-but" href="">Замовити</a>
                 </article>
 
